--- a/examples/push_notifications/client/css/style.css
+++ b/examples/push_notifications/client/css/style.css
@@ -15,6 +15,12 @@ html, body {
     overflow-y: auto;
 }
 
+    #messages p {
+        margin: 0.5rem 0;
+        padding: 0.25rem;
+        border-bottom: 1px dotted #ccc;
+    }
+
     .error {
         color: #f00;
     }
